--- a/Web/index.html
+++ b/Web/index.html
@@ -11,6 +11,7 @@
   <p>
     These statistics were created using an <a href="https://github.com/epicvrvs/DotA2Analysis">open source</a> C# application which parses data from <b>Dotabuff</b>.
     A total of <span id="sampleCount"></span> team compositions were evaluated according to their <b>win ratios</b>.
+    Not all of the compositions were included in these statistics, as only few met the requirement of at least 50 samples each.
     The flags/roles you can see in the tables, such as "carry" and "disabler", were simply copied from the game itself.
     They represent Valve's categorisation of the heroes and do not necessarily do them justice.
     The width of the bars was normalised according to the highest win ratio across all categories.
