Updated the web content, no new stats, though

--- a/Web/index.html
+++ b/Web/index.html
@@ -16,6 +16,15 @@
     They represent Valve's categorisation of the heroes and do not necessarily do them justice.
     The width of the bars was normalised according to the highest win ratio across all categories.
   </p>
+  <p>
+    Some of the configurations might add up to more then 5 flags in total.
+    This is not because the system is broken but because Valve use 3-4 different flags for the same hero so they will be counted in multiple categories simultaneously.
+  </p>
+  <p class="lastParagraph">
+    Feel free to leave comments about these statistics on <a href="http://www.reddit.com/r/DotA2/comments/11mbih/optimal_team_composition_statistics/">Reddit</a>.
+    Thanks for all your feedback, by the way!
+    I have already added numerous suggestions to the to-do list of the project.
+  </p>
   <script src="data.js"></script>
 </body>
 </html>
